<resources>
    <string name="app_name">VTM01</string>
    <string name="connection_state_success">Connection success</string>
    <string name="connection_state_failure">Connection failure</string>

    <string name="error_no_device">No device find error</string>
    <string name="error_no_connection">Connection error</string>
    <string name="error_claim_interface">Interface not available</string>
    <string name="error_read_report">Read report error</string>

    <string name="connected">Device connected</string>
    <string name="connecting">Device to connect</string>
    <string name="disconnected">Device disconnected</string>
    <string name="not_found">Device not found</string>
    <string name="permission_denied">Permission denied by user</string>
    <string name="time">Time</string>
    <string name="Oxygen_Level">Oxygen_Level</string>
    <string name="Pulse_Rate">Pulse_Rate</string>
    <string name="Pi">Pi</string>
    <string name="Status">Status</string>
    <string name="share">Share</string>
    <string name="echo">Echo</string>
    <string name="get_file_list">Get file list</string>
    <string name="read_file">Read file</string>
    <string name="set_time">Set time</string>
    <string name="get_device_info">Get device info</string>
    <string name="get_config">Get config</string>
    <string name="set_config">Set config</string>
    <string name="get_device_data">Get real data</string>
    <string name="stop_get_device_data">Stop get real data</string>
</resources>